--- a/app/src/main/res/layout/activity_segunda_tela.xml
+++ b/app/src/main/res/layout/activity_segunda_tela.xml
@@ -85,4 +85,12 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
+    <Button
+        android:id="@+id/bt_voltar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Voltar"
+        tools:layout_editor_absoluteX="159dp"
+        tools:layout_editor_absoluteY="416dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
